# LegActiveComplianceTest

./: .gitignore  ArisControl.cpp  CMakeLists.txt  Client.cpp  Client.h  ClientPRT.cpp  CommandFormat.txt  Gait.cpp  Gait.h  GaitTrjGenerator.cpp  GaitTrjGenerator.h  GeoDefinition.h  LegKinematicsIV.cpp  LegKinematicsIV.h  LogDataReader.cpp  OnlinePlanner.cpp  OnlinePlanner.h  Planners.cpp  Planners.h  README.md  Server.cpp  Server.h  TestGait.cpp  VirtualBipedPlanner.cpp  VirtualBipedPlanner.h  WorkSpaceCalculation.cpp  log_analysis.py  makerun.sh  result_analysis.py  screen_adapt.sh  start_ethercat.py  start_ethercat.sh
RobotUI/: CMakeLists.txt  ConnectionSetting.h  ParamSetWindow.cpp  ParamSetWindow.h  ParamSetWindow.ui  RobotUI.pro  RobotUI.pro.user.3.0-pre1  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_ParamSetWindow.h  ui_mainwindow.h
resource/gait/: body_down_body_feet.txt  forward_body_feet.txt  side_body_feet.txt  side_body_feet_with_step.txt  start.txt
